# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,18 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import categoriesRouter from "./categories";
+import ordersRouter from "./orders";
+import reviewsRouter from "./reviews";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(productsRouter);
+router.use(categoriesRouter);
+router.use(ordersRouter);
+router.use(reviewsRouter);
+router.use(adminRouter);
 
 export default router;
